@@ -1,5 +1,8 @@
 2011-06-17  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/bridge.py	(fas_user_is_in_group): Move into infrastructure
+	section.
+
 	* src/bridge.py	(BridgeConnection.forward_request_headers): Split from
 	handle_connection().
 	(BridgeConnection.read_request_headers)
